GPencil: Interpolate strokes causes instant crash when material list is empty #72013

Closed
opened 2019-11-28 15:38:19 +01:00 by Mark Sutton · 5 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1060

Blender Version
Broken: v2.81
Worked: 2.80 release (Although the attached blendfile does not work - the strokes aren't there, although keyframes are, and trying to interpolate causes a crash)

Slecting 'Interpolate' from the Interpolate menu in GP edit mode causes blender to instantly shut down.

Exact steps for others to reproduce the error
Open the attached.blend, select 'Interpolate' from the interpolate menu, blender crashes{F8175256}

**System Information** Operating system: Windows 10 Graphics card: GTX 1060 **Blender Version** Broken: v2.81 Worked: 2.80 release (Although the attached blendfile does not work - the strokes aren't there, although keyframes are, and trying to interpolate causes a crash) Slecting 'Interpolate' from the Interpolate menu in GP edit mode causes blender to instantly shut down. **Exact steps for others to reproduce the error** Open the attached.blend, select 'Interpolate' from the interpolate menu, blender crashes{[F8175256](https://archive.blender.org/developer/F8175256/GP_Interpolate_Crash.blend)}
Author

Added subscriber: @MarkSutton

Added subscriber: @MarkSutton

Added subscriber: @antoniov

Added subscriber: @antoniov

EDIT: We need a test file to reproduce the bug. Sorrry, I missed the attached file.

EDIT: We need a test file to reproduce the bug. Sorrry, I missed the attached file.
Antonio Vazquez changed title from Grease pencil interpolate strokes causes instant crash to GPencil: Interpolate strokes causes instant crash 2019-11-29 10:54:04 +01:00
Antonio Vazquez self-assigned this 2019-11-29 10:57:21 +01:00
Antonio Vazquez changed title from GPencil: Interpolate strokes causes instant crash to GPencil: Interpolate strokes causes instant crash when material list is empty 2019-11-29 11:02:37 +01:00

This issue was referenced by be1f4d875f

This issue was referenced by be1f4d875fb8001a10886a8577032e0f197827d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72013
No description provided.