Fix T72013: Gpencil Interpolate strokes causes instant crash when material list is empty

The problem was the draw function tried to use the material and gpsettings and both were NULL.

Now, the default material is used.